# msf

./: .gitignore  .gitmodules  CMakeLists.txt  MagneticSystem.cpp  MagneticSystem.h  ProgressBar.h  main.cpp  misc.h  progressbar.hpp  readme.md  stringfunctions.h
test/: convert_long_short.py  cyrrhus.mfsys  readme.md
